[project]
name = "rainbow-q-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "ashould01",email = "ahn40200393@snu.ac.kr"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "gymnasium[box2d] (>=1.0.0,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
    "moviepy (>=2.1.2,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "torch_cu118"}
torchvision = {source = "torch_cu118"}
torchaudio = {source = "torch_cu118"}
